@@ -1,14 +1,17 @@
-# Run cryptdisks at startup ?
+# Run cryptdisks initscripts at startup? Default is Yes.
 CRYPTDISKS_ENABLE=Yes
 
-# Mountpoints to mount, before starting cryptsetup. This is useful for
-# keyfiles on removable media. Seperate mountpoints by space.
+# Mountpoints to mount, before cryptsetup is invoked at initscripts. Takes
+# mountpoins which are configured in /etc/fstab as arguments. Separate
+# mountpoints by space.
+# This is useful for keyfiles on removable media. Default is unset.
 CRYPTDISKS_MOUNT=""
 
-# Default check script, see /lib/cryptsetup/checks/
-# Takes effect, if the 'check' option is set in crypttab without a value
+# Default check script. Takes effect, if the 'check' option is set in crypttab
+# without a value.
 CRYPTDISKS_CHECK=blkid
 
-# Default precheck script, see 
-# Takes effect, if the 'precheck' option is set in crypttab without a value
+# Default precheck script. Takes effect, if the 'precheck' option is set in
+# crypttab without a value.
+# Default is 'un_blkid' for plain dm-crypt devices if unset here.
 CRYPTDISKS_PRECHECK=
